hotFix  - erro na tela de entregas

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
             Cadastro
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" [routerLink]="['/home/cadastroClinica']">Clínica</a>
+            <a class="dropdown-item" [routerLink]="['/home/cadClinica']">Clínica</a>
             <a class="dropdown-item" href="#">Dentista</a>
             <a class="dropdown-item" href="#">Protético</a>
           </div>
