--- a/src/app/home/status-pedidos/status-pedidos.component.html
+++ b/src/app/home/status-pedidos/status-pedidos.component.html
@@ -16,7 +16,7 @@
           width="200px"
           valign="center"
         >
-          <b>Status Pedidos</b>
+          <b>Processo</b>
         </td>
         <td style="text-align: center;" colspan="3" width="450px">
           <b>Quantidade</b>
@@ -45,7 +45,7 @@
         </td>
       </tr>
       <tr>
-        <td>Abertos</td>
+        <td>Pedidos Abertos</td>
         <td style="text-align:center">{{ qdePedidosAbertos }}</td>
         <td style="text-align:center">--</td>
         <td style="text-align:center">--</td>
@@ -62,7 +62,7 @@
         </td>
       </tr>
       <tr>
-        <td>Concluídos</td>
+        <td>Entregas</td>
         <td style="text-align:center">{{ qdePedidosConcluidos }}</td>
         <td style="text-align:center">{{ qdeEntregas }}</td>
         <td style="text-align:center">--</td>
@@ -72,7 +72,7 @@
         <td style="text-align:center"></td>
       </tr>
       <tr>
-        <td>Fechados</td>
+        <td>Fechamentos</td>
         <td style="text-align:center">{{ qdePedidosFechados }}</td>
         <td style="text-align:center">{{ qdeEntregasFechadas }}</td>
         <td style="text-align:center">{{ qdeFechamentos }}</td>
